--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -7,7 +7,7 @@
       "collapsed_sections": [
         "SVLt6Xgzuvbo"
       ],
-      "authorship_tag": "ABX9TyMSGMxAbbb0V38r0bg/JkYW",
+      "authorship_tag": "ABX9TyM77ounbkPtpjGnnaTOCSJI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -212,10 +212,11 @@
       "source": [
         "'''\n",
         "This code in this cell is from https://www.kaggle.com/code/jiaowoguanren/airplanes-motorbikes-schooners-tf-efficientnet\n",
-        "I used it to create a train/test/validate split for my data\n",
+        "I used it to create a train/test/validate split for my data. It also helped me \n",
         "'''\n",
         "sdir = '/content/caltech101_classification'\n",
         "\n",
+        "#Defining function that creates training, testing, and validation dataframes\n",
         "def make_dataframes(sdir):\n",
         "    bad_images = []\n",
         "    good_ext = ['jpg', 'jpeg', 'png', 'tiff']\n",
@@ -279,7 +280,7 @@
         "    print('average image height= ', have, '  average image width= ', wave, ' aspect ratio h/w= ', aspect_ratio)\n",
         "    return train_df, test_df, valid_df, classes, class_count\n",
         "\n",
-        "\n",
+        "#Create training, testing, and validation dataframes\n",
         "train_df, test_df, valid_df, classes, class_count = make_dataframes(sdir)"
       ],
       "metadata": {
@@ -322,11 +323,12 @@
         "I had to learn what all the code, parameters and hyperparamters meant from documentation and tutorials (that I've linked in my blog post) and then write code that would actually work for \n",
         "my particular problem. \n",
         "\"\"\"\n",
-        "\n",
+        "#Rescaling images\n",
         "train_datagen = ImageDataGenerator(rescale= 1.0/255)\n",
         "test_datagen = ImageDataGenerator(rescale= 1.0/255)\n",
         "valid_datagen = ImageDataGenerator(rescale= 1.0/255) \n",
         "\n",
+        "#Generating batches of images for training, validation, and testing along with their labels to be fed into the neural net\n",
         "#Read documentation on .flow_from_dataframe() from tensorflow website: https://www.tensorflow.org/api_docs/python/tf/keras/preprocessing/image/ImageDataGenerator#flow_from_dataframe\n",
         "train_data = train_datagen.flow_from_dataframe(train_df, x_col = \"filepaths\", y_col = \"labels\", batch_size =50, class_mode= \"categorical\", target_size = (224,224))\n",
         "test_data = test_datagen.flow_from_dataframe(test_df, x_col = \"filepaths\", y_col = \"labels\", batch_size =50, class_mode= \"categorical\", target_size = (224,224))\n",
@@ -365,7 +367,9 @@
     {
       "cell_type": "code",
       "source": [
+        "#Building the model\n",
         "model = tf.keras.models.Sequential([\n",
+        "    \n",
         "    #First convolution Layer\n",
         "    tf.keras.layers.Conv2D(16, (3,3), activation= \"relu\", input_shape= (224,224,3)),\n",
         "    tf.keras.layers.MaxPooling2D(2,2),\n",
@@ -950,102 +954,6 @@
           "metadata": {}
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Forth Run"
-      ],
-      "metadata": {
-        "id": "9HrTH4S4jEwO"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "model = tf.keras.models.Sequential([\n",
-        "    #First convolution Layer\n",
-        "    tf.keras.layers.Conv2D(16, (3,3), activation= \"relu\", input_shape= (224,224,3)),\n",
-        "    tf.keras.layers.MaxPooling2D(2,2),\n",
-        "\n",
-        "    #Second convolution layer\n",
-        "    tf.keras.layers.Conv2D(32, (3,3), activation= \"relu\"),\n",
-        "    tf.keras.layers.MaxPooling2D(2,2),\n",
-        "\n",
-        "    #Third convolution layer\n",
-        "    tf.keras.layers.Conv2D(64, (3,3), activation= \"relu\"),\n",
-        "    tf.keras.layers.MaxPooling2D(2,2),\n",
-        "\n",
-        "    #Fourth convolution layer\n",
-        "    tf.keras.layers.Conv2D(128, (3,3), activation= \"relu\"),\n",
-        "    tf.keras.layers.MaxPooling2D(2,2),\n",
-        "\n",
-        "    #Flattening to feed into DNN\n",
-        "    tf.keras.layers.Flatten(),\n",
-        "\n",
-        "    #Hidden Layer with 512 neurons\n",
-        "    tf.keras.layers.Dense(512, activation= 'relu'),\n",
-        "\n",
-        "    #\n",
-        "    tf.keras.layers.Dense(3, activation= 'softmax')\n",
-        "\n",
-        "    ])\n",
-        "\n",
-        "model.compile(loss= \"mean_squared_error\", optimizer= RMSprop(lr=0.001), metrics = [\"acc\"])"
-      ],
-      "metadata": {
-        "id": "4L2Oo1E-dEjL"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "history = model.fit(train_data, \n",
-        "                    epochs = 15, \n",
-        "                    steps_per_epoch = 15, \n",
-        "                    validation_data = valid_data, \n",
-        "                    validation_steps = 5)"
-      ],
-      "metadata": {
-        "id": "fwd7e03mjBOv"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Retrieve a list of list results on training and test datasets for each training epoch\n",
-        "acc=history.history['acc']\n",
-        "val_acc=history.history['val_acc']\n",
-        "loss=history.history['loss']\n",
-        "val_loss=history.history['val_loss']\n",
-        "\n",
-        "# Get number of epochs\n",
-        "epochs= range(len(acc)) \n",
-        "\n",
-        "# Plot training and validation accuracy per epoch\n",
-        "plt.plot(epochs, acc, 'r',label = \"Training Accuracy\")\n",
-        "plt.plot(epochs, val_acc, 'b',label =  \"Validation Accuracy\")\n",
-        "plt.title('Training and validation accuracy per epoch')\n",
-        "plt.legend(loc= 2)\n",
-        "plt.figure()\n",
-        "plt.show()\n",
-        "\n",
-        "# Plot training and validation loss per epoch\n",
-        "plt.plot(epochs, loss, 'r', label = \"Training Loss\")\n",
-        "plt.plot(epochs, val_loss, 'b', label = \"Validation Loss\")\n",
-        "plt.title('Training and validation loss per epoch')\n",
-        "plt.figure()\n",
-        "plt.show()"
-      ],
-      "metadata": {
-        "id": "osx6WH0njDM_"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
