--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -7,7 +7,7 @@
       "collapsed_sections": [
         "SVLt6Xgzuvbo"
       ],
-      "authorship_tag": "ABX9TyM77ounbkPtpjGnnaTOCSJI",
+      "authorship_tag": "ABX9TyP/i5+PIdhu2PsmUtNewrqh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -211,8 +211,9 @@
       "cell_type": "code",
       "source": [
         "'''\n",
-        "This code in this cell is from https://www.kaggle.com/code/jiaowoguanren/airplanes-motorbikes-schooners-tf-efficientnet\n",
-        "I used it to create a train/test/validate split for my data. It also helped me \n",
+        "This code in this cell is from https://www.kaggle.com/code/jiaowoguanren/airplanes-motorbikes-schooners-tf-efficientnet \n",
+        "I used it to create a train/test/validate split for my data. (It also helped me in the next cell to understand I needed to use the \n",
+        "\".flow_from_dataframe\" when generating batches of images and labels for training, testing and validating the neural net). \n",
         "'''\n",
         "sdir = '/content/caltech101_classification'\n",
         "\n",
@@ -321,7 +322,7 @@
         "https://colab.research.google.com/github/lmoroney/dlaicourse/blob/master/Course%202%20-%20Part%208%20-%20Lesson%202%20-%20Notebook%20(RockPaperScissors).ipynb#scrollTo=ZABJp7T3VLCU\n",
         "I say loosely based because while I learned the essence of how to set up, compile and fit the model from this tutorial it would not have worked for the problem I am trying to solve,\n",
         "I had to learn what all the code, parameters and hyperparamters meant from documentation and tutorials (that I've linked in my blog post) and then write code that would actually work for \n",
-        "my particular problem. \n",
+        "my particular problem. Therefore these next few cells are where most of my unique contributions are. \n",
         "\"\"\"\n",
         "#Rescaling images\n",
         "train_datagen = ImageDataGenerator(rescale= 1.0/255)\n",
