--- a/CSE5334_Assignment_2.ipynb
+++ b/CSE5334_Assignment_2.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMKL0yUPLdHDMce5MrhECao",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNMSELhKlLjVVCWYTNP96WY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -257,7 +258,7 @@
         "df = pd.DataFrame(columns = ['ID', 'Sentence', 'Type'])\n",
         "\n",
         "#list of common words that I want filtered out of the data frame\n",
-        "common_words = ['a','of','in','an','and','on','for','is','or','our','to','the','  ',' ','',\"'\",\"&\",'1','2','3','4','5','6','7','8','9','10','11','12','*','?']\n",
+        "common_words = ['a','of','in','an','and','on','for','is','or','our','to','the','  ',' ','',\"'\",\"&\",'1','2','3','4','5','6','7','8','9','10','11','12','*','?','nan',';','experience']\n",
         "  \n",
         "# append rows to an empty DataFrame\n",
         "for i in range (0, len(data_df)):\n",
@@ -284,7 +285,7 @@
         "  for word in common_words:\n",
         "    if word in sentence_list:\n",
         "      sentence_list.remove(word)\n",
-        "\n",
+        "      \n",
         "  df = df.append({'ID' : data_df.Sentence_id[i], \"Sentence\": sentence_list, \"Type\" : data_df.Type[i]}, ignore_index = True)\n",
         "    \n",
         "display(df.head(5))"
@@ -295,9 +296,9 @@
           "height": 206
         },
         "id": "QvtktWYMRldr",
-        "outputId": "1da87a83-b219-4447-f8c7-c8d6e16aacab"
+        "outputId": "cb43ab03-e172-49b9-8eee-9cc55f115c07"
       },
-      "execution_count": 148,
+      "execution_count": 238,
       "outputs": [
         {
           "output_type": "display_data",
@@ -306,8 +307,8 @@
               "            ID                                           Sentence  \\\n",
               "0  GERSSK30162  [author, review, architecture, design, and, ot...   \n",
               "1   HONRES6412  [should, be, able, develop, custom, dynamic, s...   \n",
-              "2  PHERES52517  [experience, working, crosslly, with, larger, ...   \n",
-              "3   COGSKL4552  [previous, business, experience, including, bu...   \n",
+              "2  PHERES52517  [working, crosslly, with, larger, engineering,...   \n",
+              "3   COGSKL4552  [previous, business, including, but, not, limi...   \n",
               "4  UAEREQ34683             [delivering, fast, right, first, time]   \n",
               "\n",
               "             Type  \n",
@@ -319,7 +320,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-75c2b016-edfa-4216-9c6d-df17216ae37d\">\n",
+              "  <div id=\"df-1d4ac662-52cc-4ded-97d2-a51f724857e1\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -360,13 +361,13 @@
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>PHERES52517</td>\n",
-              "      <td>[experience, working, crosslly, with, larger, ...</td>\n",
+              "      <td>[working, crosslly, with, larger, engineering,...</td>\n",
               "      <td>Responsibility</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>COGSKL4552</td>\n",
-              "      <td>[previous, business, experience, including, bu...</td>\n",
+              "      <td>[previous, business, including, but, not, limi...</td>\n",
               "      <td>Skill</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -378,7 +379,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-75c2b016-edfa-4216-9c6d-df17216ae37d')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1d4ac662-52cc-4ded-97d2-a51f724857e1')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -429,12 +430,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-75c2b016-edfa-4216-9c6d-df17216ae37d button.colab-df-convert');\n",
+              "          document.querySelector('#df-1d4ac662-52cc-4ded-97d2-a51f724857e1 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-75c2b016-edfa-4216-9c6d-df17216ae37d');\n",
+              "          const element = document.querySelector('#df-1d4ac662-52cc-4ded-97d2-a51f724857e1');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -479,9 +480,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zvP6FYqGu_yI",
-        "outputId": "b3caf2d3-d884-404a-9fa6-ab71d4fc6f4d"
+        "outputId": "dee4ee8d-d9b5-432e-d619-d2c95c29c0da"
       },
-      "execution_count": 172,
+      "execution_count": 239,
       "outputs": [
         {
           "output_type": "stream",
@@ -520,9 +521,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vbMqK3r7Z0Xu",
-        "outputId": "e2ec2746-5f78-4a77-93c0-e74587577110"
+        "outputId": "0f42954a-cbe8-4567-9102-6121459bb3ca"
       },
-      "execution_count": 173,
+      "execution_count": 240,
       "outputs": [
         {
           "output_type": "stream",
@@ -587,7 +588,7 @@
       "metadata": {
         "id": "Wm7TmB1ZJGOX"
       },
-      "execution_count": 174,
+      "execution_count": 241,
       "outputs": []
     },
     {
@@ -605,20 +606,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "W1CpVSwtONyU",
-        "outputId": "af626839-1645-4fd7-bb22-1c67288c5695"
+        "outputId": "8820bb0f-e073-44f2-bf25-a6ded604005a"
       },
-      "execution_count": 175,
+      "execution_count": 242,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "135902\n",
-            "128310\n",
-            "44466\n",
-            "114939\n",
-            "64540\n",
-            "53421\n"
+            "131031\n",
+            "124714\n",
+            "43610\n",
+            "112198\n",
+            "62953\n",
+            "52629\n"
           ]
         }
       ]
@@ -698,8 +699,67 @@
       "metadata": {
         "id": "7FUalde5MI_2"
       },
-      "execution_count": 176,
+      "execution_count": 243,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Top Ten Words Per Class"
+      ],
+      "metadata": {
+        "id": "stiB4rKC1deX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Top ten words for Responsibility class\n",
+        "responsibility_top_ten_words = sorted(responsibility_word_probabilities, key = responsibility_word_probabilities.get, reverse=True)[:10]\n",
+        "print(responsibility_top_ten_words)\n",
+        "\n",
+        "#Top ten words for Requirement class\n",
+        "requirement_top_ten_words = sorted(requirement_word_probabilities, key = requirement_word_probabilities.get, reverse=True)[:10]\n",
+        "print(requirement_top_ten_words)\n",
+        "\n",
+        "#Top ten words for Skill class\n",
+        "skill_top_ten_words = sorted(skill_word_probabilities, key = skill_word_probabilities.get, reverse=True)[:10]\n",
+        "print(skill_top_ten_words)\n",
+        "\n",
+        "#Top ten words for SoftSkill class\n",
+        "softskill_top_ten_words = sorted(softskill_word_probabilities, key = softskill_word_probabilities.get, reverse=True)[:10]\n",
+        "print(softskill_top_ten_words)\n",
+        "\n",
+        "#Top ten words for Education class\n",
+        "education_top_ten_words = sorted(education_word_probabilities, key = education_word_probabilities.get, reverse=True)[:10]\n",
+        "print(education_top_ten_words)\n",
+        "\n",
+        "#Top ten words for Experience class\n",
+        "experience_top_ten_words = sorted(experience_word_probabilities, key = experience_word_probabilities.get, reverse=True)[:10]\n",
+        "print(experience_top_ten_words)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NHJkZcID1g6C",
+        "outputId": "8ca8131f-caad-4fe4-ae93-6adb6cfb6d9b"
+      },
+      "execution_count": 244,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['with', 'and', 'years', 'skills', 'ability', 'management', 'engineering', 'business', 'degree', 'knowledge']\n",
+            "['with', 'and', 'years', 'skills', 'ability', 'management', 'engineering', 'business', 'degree', 'this']\n",
+            "['and', 'with', 'years', 'skills', 'business', 'to', 'management', 'ability', 'the', 'of']\n",
+            "['and', 'with', 'years', 'business', 'ability', 'skills', 'management', 'engineering', 'as', 'degree']\n",
+            "['and', 'with', 'years', 'ability', 'business', 'management', 'engineering', 'the', 'as', 'skills']\n",
+            "['and', 'with', 'the', 'to', 'years', 'business', 'of', 'as', 'management', 'ability']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -860,7 +920,7 @@
       "metadata": {
         "id": "YbyfbUj2i57N"
       },
-      "execution_count": 177,
+      "execution_count": 245,
       "outputs": []
     },
     {
@@ -881,15 +941,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FI6L8O6SQT78",
-        "outputId": "b84ae2c2-4c1a-4038-b1cc-6dbce3a02339"
+        "outputId": "dc2febdc-b3b4-47dc-91d3-2173611d7eb3"
       },
-      "execution_count": 178,
+      "execution_count": 246,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "24.151696606786427\n"
+            "24.717232202262142\n"
           ]
         }
       ]
@@ -905,9 +965,9 @@
           "height": 424
         },
         "id": "snGXDxvPtzrv",
-        "outputId": "896b7c38-2559-4fa5-f4cd-3493d46f66f1"
+        "outputId": "4f84fc2c-0ecd-456c-fb35-fcd82e7688ba"
       },
-      "execution_count": 179,
+      "execution_count": 247,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -918,32 +978,32 @@
               "1      INDRES9494    [excellent, communication, influencing, skills]   \n",
               "2      HONRES5690  [bachelors, degree, appropriate, field, such, ...   \n",
               "3     GERSKL27235                              [job, id:, req355943]   \n",
-              "4      INDRES9494                     [18, months, experience, role]   \n",
+              "4      INDRES9494                                 [18, months, role]   \n",
               "...           ...                                                ...   \n",
               "3001  HONSSK20082  [results-driven, behaviors, with, consistent, ...   \n",
-              "3002   HONRES6412  [3+, years, experience, analyzing, large, data...   \n",
-              "3003  HONSSK18415                   [some, experience, using, tools]   \n",
-              "3004  COGREQ33585  [5+, years, experience, sales, excellence, com...   \n",
+              "3002   HONRES6412  [3+, years, analyzing, large, data, sets, as, ...   \n",
+              "3003  HONSSK18415                               [some, using, tools]   \n",
+              "3004  COGREQ33585  [5+, years, sales, excellence, commercial, exc...   \n",
               "3005  UAEREQ34683  [attraktive, bezahlung, mit, sonderzahlungen, ...   \n",
               "\n",
               "                Type      Prediction  \n",
               "0              Skill      Experience  \n",
               "1     Responsibility  Responsibility  \n",
               "2     Responsibility  Responsibility  \n",
-              "3              Skill     Requirement  \n",
+              "3              Skill           Skill  \n",
               "4     Responsibility  Responsibility  \n",
               "...              ...             ...  \n",
-              "3001       SoftSkill  Responsibility  \n",
-              "3002  Responsibility  Responsibility  \n",
+              "3001       SoftSkill           Skill  \n",
+              "3002  Responsibility      Experience  \n",
               "3003       SoftSkill  Responsibility  \n",
               "3004     Requirement  Responsibility  \n",
-              "3005     Requirement     Requirement  \n",
+              "3005     Requirement  Responsibility  \n",
               "\n",
               "[3006 rows x 4 columns]"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-1814394e-7e54-4921-beae-bc7383f14f16\">\n",
+              "  <div id=\"df-354ae38d-679e-442b-995b-ad6f4cc3fd01\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -996,12 +1056,12 @@
               "      <td>GERSKL27235</td>\n",
               "      <td>[job, id:, req355943]</td>\n",
               "      <td>Skill</td>\n",
-              "      <td>Requirement</td>\n",
+              "      <td>Skill</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>INDRES9494</td>\n",
-              "      <td>[18, months, experience, role]</td>\n",
+              "      <td>[18, months, role]</td>\n",
               "      <td>Responsibility</td>\n",
               "      <td>Responsibility</td>\n",
               "    </tr>\n",
@@ -1017,26 +1077,26 @@
               "      <td>HONSSK20082</td>\n",
               "      <td>[results-driven, behaviors, with, consistent, ...</td>\n",
               "      <td>SoftSkill</td>\n",
-              "      <td>Responsibility</td>\n",
+              "      <td>Skill</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3002</th>\n",
               "      <td>HONRES6412</td>\n",
-              "      <td>[3+, years, experience, analyzing, large, data...</td>\n",
+              "      <td>[3+, years, analyzing, large, data, sets, as, ...</td>\n",
               "      <td>Responsibility</td>\n",
-              "      <td>Responsibility</td>\n",
+              "      <td>Experience</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3003</th>\n",
               "      <td>HONSSK18415</td>\n",
-              "      <td>[some, experience, using, tools]</td>\n",
+              "      <td>[some, using, tools]</td>\n",
               "      <td>SoftSkill</td>\n",
               "      <td>Responsibility</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3004</th>\n",
               "      <td>COGREQ33585</td>\n",
-              "      <td>[5+, years, experience, sales, excellence, com...</td>\n",
+              "      <td>[5+, years, sales, excellence, commercial, exc...</td>\n",
               "      <td>Requirement</td>\n",
               "      <td>Responsibility</td>\n",
               "    </tr>\n",
@@ -1045,13 +1105,13 @@
               "      <td>UAEREQ34683</td>\n",
               "      <td>[attraktive, bezahlung, mit, sonderzahlungen, ...</td>\n",
               "      <td>Requirement</td>\n",
-              "      <td>Requirement</td>\n",
+              "      <td>Responsibility</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "<p>3006 rows × 4 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1814394e-7e54-4921-beae-bc7383f14f16')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-354ae38d-679e-442b-995b-ad6f4cc3fd01')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1102,12 +1162,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-1814394e-7e54-4921-beae-bc7383f14f16 button.colab-df-convert');\n",
+              "          document.querySelector('#df-354ae38d-679e-442b-995b-ad6f4cc3fd01 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-1814394e-7e54-4921-beae-bc7383f14f16');\n",
+              "          const element = document.querySelector('#df-354ae38d-679e-442b-995b-ad6f4cc3fd01');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1130,27 +1190,9 @@
             ]
           },
           "metadata": {},
-          "execution_count": 179
+          "execution_count": 247
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Top Ten Words Per Class"
-      ],
-      "metadata": {
-        "id": "stiB4rKC1deX"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "NHJkZcID1g6C"
-      },
-      "execution_count": 179,
-      "outputs": []
     }
   ]
 }
